fix(css): dark mode buttons colors and fix syntax errors

--- a/ativos/estilos/estilo.css
+++ b/ativos/estilos/estilo.css
@@ -1133,8 +1133,7 @@ img {
     transition: opacity 0.7s ease-in-out, height 0.8s ease-in-out; /* foto com transição levemente mais lenta */
 }
 
-/* Botão Mostrar Foto */
-
+#botao-mostrar-foto {
     position: absolute;
     right: var(--mostrar-foto-right-desktop);
     top: var(--mostrar-foto-top-desktop);
@@ -1177,8 +1176,8 @@ img {
 body.modo-escuro .mudar-tema,
 body.modo-escuro .gerar-pdf,
 body.modo-escuro #botao-cores,
-body.modo-escuro #botao-ocultar-foto,
-body.modo-escuro 
+body.modo-escuro #botao-ocultar-foto {
+    background-color: #fff !important;
     color: #000 !important; /* força preto para o ícone */
 }
 
